--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,10 +3,10 @@
         <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
-            <a class="list-group-item" style="cursor: pointer;" *ngFor="let item of ingredients; let i = index"
+            <a class="list-group-item" style="cursor: pointer;" *ngFor="let item of (ingredients | async).ingredients; let i = index"
              (click)="onEditItem(item, i)" >
                 {{item.name}}
-                ({{item.amount}})   
+                ({{item.amount}})
             </a>
         </ul>
     </div>
